--- a/reactproject/package.json
+++ b/reactproject/package.json
@@ -12,9 +12,12 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "bootstrap": "^5.3.8",
+    "font-awesome": "^4.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
