--- a/reactproject/package.json
+++ b/reactproject/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "axios": "^1.13.4",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.12.0",
